--- a/src/components/timer/timer.module.css
+++ b/src/components/timer/timer.module.css
@@ -1,23 +1,25 @@
 .timer {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .text {
-    color: #bbb;
+  color: #bbb;
 }
 
 .value {
-    font-size: 15px;
-    padding: 5px;
-    font-weight: 600;
+  font-size: 15px;
+  padding: 5px;
+  font-weight: 600;
 }
 
 .pulse {
-    animation: heartbeat 1s infinite;
+  animation: heartbeat 1s infinite;
 }
 
 @keyframes heartbeat {
-    to { transform: scale(1.6); }
+  to {
+    transform: scale(1.6);
+  }
 }
